added NewChunkDetector and fix build errors